cleaned up code for utils.js and increased the z-index for the Nav to 3 to fix issue with portfolio card placeholders overlapping the nav

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -12,7 +12,8 @@
 		transition: all 500ms ease-in-out;
 		top: 0;
 		width: 100%;
-		z-index: 2;
+		// z-index: 2;
+		z-index: 3;
 
 		&.hide {
 			margin-top: -5rem;
